<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/legal_information"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/copyright_title" android:key="copyright">
        <intent android:action="android.settings.COPYRIGHT" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/license_title" android:key="license">
        <intent android:action="android.settings.LICENSE" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/terms_title" android:key="terms">
        <intent android:action="android.settings.TERMS" />
    </PreferenceScreen>
    <Preference android:title="@101450100" android:key="miuiCopyright" />
    <Preference android:title="@101450103" android:key="miuiUserAgreement" />
    <Preference android:title="@101450102" android:key="miuiPrivacyPolicy" />
</PreferenceScreen>
