<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="@miui:dimen/v5_preference_screen_padding_top" android:paddingBottom="@miui:dimen/v5_preference_screen_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:id="@id/info" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/type" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:background="@miui:drawable/v5_group_single_item_bg_light" style="@style/input_item_horizontal">
                <TextView android:background="@drawable/input_item_single" android:text="@string/wifi_ssid" style="@style/input_item_label" />
                <EditText android:id="@id/ssid" android:singleLine="true" android:maxLength="32" android:inputType="textNoSuggestions" style="@style/input_item_content" />
            </LinearLayout>
            <LinearLayout style="@style/wifi_item">
                <TextView android:text="@string/wifi_security" style="@style/input_category" />
                <Spinner android:entries="@array/wifi_ap_security" android:id="@id/security" android:prompt="@string/wifi_security" style="@style/wifi_item_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/fields" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <LinearLayout android:id="@id/l_password" android:background="@miui:drawable/v5_group_single_item_bg_light" style="@style/input_item_horizontal">
                <TextView android:id="@id/password_text" android:background="@drawable/input_item_single" android:text="@string/wifi_password" style="@style/input_item_label" />
                <EditText android:id="@id/password" android:hint="@string/credentials_password_too_short" android:password="true" android:singleLine="true" android:maxLength="63" android:inputType="textNoSuggestions" style="@style/input_item_content" />
            </LinearLayout>
            <CheckBox android:textSize="14.0sp" android:id="@id/show_password" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:text="@string/wifi_show_password" style="@style/wifi_item_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
