<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/application_permission" android:background="@100794808" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textAppearance="@101515305" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/perm_hips" android:singleLine="true" />
            <TextView android:textAppearance="@101515300" android:id="@id/application_permission_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/perm_hips_desc1" android:singleLine="true" />
        </LinearLayout>
        <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@100794585" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:id="@id/root_permission" android:background="@100794808" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">>
<LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textAppearance="@101515305" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/perm_hips_root" android:singleLine="true" />
            <TextView android:textAppearance="@101515300" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/perm_su_desc1" android:singleLine="true" />
        </LinearLayout>
        <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@100794585" />
    </LinearLayout>
    <ListView android:id="@android:id/list" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/perm_copyright" android:singleLine="true" />
</LinearLayout>
