<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" style="@miui:style/V5.Widget.DialogTitle" />
            <include android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/msd_install_header" />
            <RadioGroup android:id="@id/msd_install_status_grp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:id="@id/msd_install_undo" android:background="@100794866" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/msd_install_status_undo" />
                <RadioButton android:id="@id/msd_install_done" android:background="@100794866" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/msd_install_status_done" />
            </RadioGroup>
            <CheckBox android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/msd_install_succeed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msd_install_succeed" style="@android:style/TextAppearance.Medium" />
            <TextView android:id="@id/msd_install_retry" android:padding="@101318702" android:focusable="false" android:visibility="gone" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:padding="@101318702" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:gravity="center" android:id="@id/msd_install_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1.0" />
        <Button android:gravity="center" android:id="@id/msd_install_next" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/msd_install_next" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
