<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/user_dict_settings_add_dialog_top" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="@100794766" android:layout_marginTop="@101318713" style="@style/input_item_horizontal">
        <TextView android:background="@drawable/input_item_first" android:text="@string/user_dict_settings_add_screen_title" style="@style/input_item_label" />
        <EditText android:id="@id/user_dictionary_add_word_text" android:singleLine="true" android:maxLength="@integer/maximum_user_dictionary_word_length" android:inputType="textNoSuggestions" android:imeOptions="flagNoFullscreen" style="@style/input_item_content">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout android:background="@100794768" style="@style/input_item_horizontal">
        <TextView android:id="@id/user_dictionary_add_shortcut_label" android:background="@drawable/input_item_last" android:text="@string/user_dict_settings_add_shortcut_option_name" style="@style/input_item_label" />
        <EditText android:id="@id/user_dictionary_add_shortcut" android:maxLength="@integer/maximum_user_dictionary_word_length" android:inputType="textNoSuggestions" android:imeOptions="flagNoFullscreen" style="@style/input_item_content" />
    </LinearLayout>
    <LinearLayout style="@style/wifi_item">
        <TextView android:id="@id/user_dictionary_add_locale_label" android:text="@string/user_dict_settings_add_locale_option_name" style="@style/input_category" />
        <Spinner android:id="@id/user_dictionary_add_locale" style="@style/wifi_item_content" />
    </LinearLayout>
</LinearLayout>
